# Phalanx-Cyber-Academy

./: .env.template  .gitignore  AGENTS.md  DESIGN.md  IMPLEMENTATION_COMPLETE.md  PLAYWRIGHT_IMPLEMENTATION_SUMMARY.md  PLAYWRIGHT_TESTS_SUMMARY.md  README.md  TESTING_ARCHITECTURE.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_QUICKSTART.md  TESTS_STRUCTURE.md  XTERM_INTEGRATION_README.md  config.py  docker-compose.yml  generate_test_template.py  pytest.ini  render.yaml  requirements.txt  run_tests.py  start.sh  supabase_schema.sql  vercel.json
backend/: .env.template  .gitignore  Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  errors.py  main.py  supabase_client.py
backend/app/data/: migrate-levels.mjs
backend/app/data/level_content/level_1/: config.json  data.json  dialogues.json  news_articles.json
backend/app/data/level_content/level_2/: config.json  data.json  dialogues.json
backend/app/data/level_content/level_3/: config.json  data.json  dialogues.json
backend/app/routers/: admin.py  auth.py  backup.py  blue_vs_red.py  contact.py  content.py  levels.py  reports.py  sessions.py  users.py  xp.py
backend/app/services/: contact_service.py  email_service.py  email_verification_service.py  level_service.py  login_attempt_service.py  session_service.py  user_service.py  xp_award.py  xp_history_service.py  xp_service.py
backend/app/templates/emails/: contact_auto_reply.html  contact_notification.html  login_verification.html  signup_verification.html
backend/app/utils/: security.py  timezone_utils.py
backend/tests/: test_xp.py
(+607 files in other folders)
